z-index fix

--- a/css/_catalog.scss
+++ b/css/_catalog.scss
@@ -6,7 +6,7 @@
   justify-self: end;
   cursor: pointer;
 
-  z-index: -1;
+  z-index: 0;
 
   &:before {
     display: block;
